attic/old_tests/xml/invalidxml/obsTime/badtime5.xml.README
badtime5.xml: BAD because obsTime has April which does not have 31 days
